tinyc/test/bad/struct-const-field-copy.c
struct s
{
    const int x;
    int y;
};

int main()
{
    struct s s, t;

    s = t;

    return 0;
}
